--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ CLIENT_EMAIL=firebase-adminsdk-fbsvc@codora-app1.iam.gserviceaccount.com
 CLIENT_ID=100961151944557655382
 AUTH_URI=https://accounts.google.com/o/oauth2/auth
 TOKEN_URI=https://oauth2.googleapis.com/token
+FCME_NDPOINT=https://fcm.googleapis.com/v1/projects/codora-app1/messages:send
